--- a/Archivos_JS/Circuitos - Velocidad/index.html
+++ b/Archivos_JS/Circuitos - Velocidad/index.html
@@ -1,33 +1,113 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <title>Circuitos</title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Ubuntu:wght@300&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <br><br><br><br><br><br><br><br><br>
-    <div id="divTrabajo">
-        <h2  class="textoDeDivs">Calcular la velocidad</h2>
-        <h4 class="textoDeFormula">V=dW/dQ</h4>
-        <div>
-            <label class="labes">Ingresa el trabajo (W):</label>
+    <div>
+
+        <div id="divVelocidad">
+
+            <h2 class="textoDeDivs">Calcular la velocidad</h2>
+            <h4 class="textoDeFormula">V = dW/dQ</h4>
+
+            <div>
+                <label class="labes">Ingresa el trabajo (W):</label>
+                <br><br>
+                <input type="number" id="w" required>
+            </div>
+
+            <br>
+
+            <div>
+                <label class="labes">Ingresa la carga electrica (Q):</label>
+                <br><br>
+                <input type="number" id="q" required>
+            </div>
+
             <br><br>
-            <input type="number" id="Trabajo"> 
-        </div>
-        <br>
-        <div>
-            <label class="labes">Ingresa la carga electrica (Q):</label>
+
+            <button class="Calcular" onclick="calcularVelocidad()">Calcular</button>
+
             <br><br>
-            <input type="number" id="Carga">
+
+            <div id="respuesta"></div>
+
         </div>
-        <br><br>
-        <button class="Calcular" onclick="calcular()">Calcular</button>
-        <br><br>
-        <div id="respuesta"></div>
+
+        <div id="divTrabajo">
+            <h2 class="textoDeDivs">Calcular el trabajo </h2>
+            <h4 class="textoDeFormula"> T = F*r*Cos()</h4>
+
+            <div>
+                <label class="labes">Ingresa la fuerza (F):</label>
+                <br><br>
+                <input type="number" id="f" required>
+            </div>
+
+            <br>
+
+            <div>
+                <label class="labes">Ingresa la distancia (r):</label>
+                <br><br>
+                <input type="number" id="r" required>
+            </div>
+
+            <br>
+
+            <div>
+                <label class="labes">Ingresa el coseno (Cos):</label>
+                <br><br>
+                <input type="number" id="cos" required>
+            </div>
+
+            <br><br>
+
+            <button onclick="calcularTrabajo()">Calcular</button>
+            <br><br>
+
+            <div id="respuestaTrabajo"></div>
+
+        </div>
+
+        <div id="divCargaElectrica">
+
+            <h2 class="textoDeDivs">Calcular la carga eléctrica</h2>
+            <h4 class="textoDeFormula"> Q = I*t</h4>
+
+            <div>
+                <label class="labes">Ingresa la intensidad de amperios (I):</label>
+                <br><br>
+                <input type="number" id="i" required>
+            </div>
+
+            <br>
+
+            <div>
+                <label class="labes">Ingresa el tiempo en segundos (t):</label>
+                <br><br>
+                <input type="number" id="a" required>
+            </div>
+
+            <br><br>
+
+            <button onclick="calcularCargaElectrica()">Calcular</button>
+
+            <br><br>
+
+            <div id="respuestaCargaElectrica"></div>
+
+        </div>
     </div>
 </body>
+
 <script src="main.js"></script>
+
 </html>
